--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <main class="maincontent">
         <section class=" maincontent-inner whitetext">
             <nav>
-                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>
-            </nav>
+                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html" class="whitetext">Contactform</a>
+            </nav><br/>
+            <button id="mode" class="btn-base">Change mode</button>
+            <noscript>Please enable JavaScript to change the theme.</noscript>
             <section>
                 <h1 id="H1">Andy's Homepage</h1>
                 <h2 id="aboutme">About Me</h2>
