--- a/feedback&contact.html
+++ b/feedback&contact.html
@@ -19,7 +19,7 @@
     <main class="maincontent">
         <section class=" maincontent-inner whitetext">
             <nav>
-                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>
+                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html" class="whitetext">Contactform</a>
             </nav>
             <section class="forgrid">
                 <h1>Please provide feedback&advice</h1>
