--- a/form-no-js.html
+++ b/form-no-js.html
@@ -26,7 +26,7 @@
                 <h1>Contact Form</h1>
                 <form action="https://httpbin.org/post" method="POST" id="contactForm">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required pattern="[a-zA-Z\s]+" title="Please only contain letters and spaces." placeholder="Enter your name here">
+                    <input type="text" id="name" name="name" required pattern="[a-zA-Z\- ]*" title="Please only contain letters and spaces." placeholder="Enter your name here">
                     <div style="display: flex; justify-content: space-around;">
                         <output name="nameError">error-message-if-any</output>
                         <output name="nameInfo">info-message-if-any</output>
