--- a/hometown.html
+++ b/hometown.html
@@ -10,6 +10,7 @@
     <title>Hometown</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700">
+    <script src="js/form.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <main class="maincontent">
         <section class=" maincontent-inner whitetext">
             <nav>
-                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html" class="whitetext">Contactform</a>
+                <a id="Home" href="index.html">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html">Contactform</a>
             </nav>
             <section>
                 <style scoped>
