--- a/contactform.html
+++ b/contactform.html
@@ -14,7 +14,6 @@
         form {
                 display: flex;
                 flex-direction: column;
-                background-color: rgb(11, 11, 11);
                 padding: 5px 25px;
         }
         
@@ -69,7 +68,7 @@
     <main class="maincontent">
         <section class=" maincontent-inner whitetext">
             <nav>
-                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html" class="whitetext">Contactform</a>
+                <a id="Home" href="index.html">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html">Contactform</a>
             </nav>
             <section class="forgrid">
                 <h1>Contact Form</h1>
