--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Homepage by &copy; Andy Dai</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700">
+    <script src="js/form.js"></script> 
 </head>
 
 <body>
@@ -19,9 +20,9 @@
     <main class="maincontent">
         <section class=" maincontent-inner whitetext">
             <nav>
-                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html" class="whitetext">Contactform</a>
+                <a id="Home" href="index.html">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html">Contactform</a>
             </nav><br/>
-            <button id="mode" class="btn-base">Change mode</button>
+            <button id="text-color-toggle" class="btn-base">Change Mode</button>
             <noscript>Please enable JavaScript to change the theme.</noscript>
             <section>
                 <h1 id="H1">Andy's Homepage</h1>
