--- a/form-no-js.html
+++ b/form-no-js.html
@@ -7,7 +7,7 @@
     <meta name="title" content="contact me" />
     <meta property="og:description" content="A feedback and contact page for my homepage">
     <meta name="author" content="Andy Dai" />
-    <title>Feedback and Contact</title>
+    <title>no-js-form</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/form-no-js.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700"/>
@@ -20,7 +20,7 @@
     <main class="maincontent">
         <section class=" maincontent-inner whitetext">
             <nav>
-                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="form-no-js.html" class="whitetext">Contactform</a>
+                <a id="Home" href="index.html" class="whitetext">Home</a>&nbsp;<a id="Hometown" href="hometown.html" class="whitetext">WhereImFrom</a>&nbsp;<a id="Feedback" href="feedback&contact.html" class="whitetext">FeedBack</a>&nbsp;<a id="Contactform" href="contactform.html" class="whitetext">jsform</a>&nbsp;<a id="form-no-js" href="form-no-js.html" class="whitetext">no-js</a>
             </nav>
             <section class="forgrid">
                 <h1>Contact Form</h1>
