--- a/contactform.html
+++ b/contactform.html
@@ -7,7 +7,7 @@
     <meta name="title" content="contact me" />
     <meta property="og:description" content="A feedback and contact page for my homepage">
     <meta name="author" content="Andy Dai" />
-    <title>Feedback and Contact</title>
+    <title>Contact</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/contact.css" rel="stylesheet" />
     <style>
@@ -68,7 +68,7 @@
     <main class="maincontent">
         <section class=" maincontent-inner whitetext">
             <nav>
-                <a id="Home" href="index.html">Home</a>&nbsp;&nbsp;&nbsp;<a id="Hometown" href="hometown.html">WhereImFrom</a>&nbsp;&nbsp;&nbsp;<a id="Feedback" href="feedback&contact.html">FeedBack&Contact</a>&nbsp;&nbsp;&nbsp;<a id="Contactform" href="contactform.html">Contactform</a>
+                <a id="Home" href="index.html">Home</a>&nbsp;<a id="Hometown" href="hometown.html">WhereImFrom</a>&nbsp;<a id="Feedback" href="feedback&contact.html">FeedBack</a>&nbsp;<a id="Contactform" href="contactform.html">jsform</a>&nbsp;<a id="form-no-js" href="form-no-js.html">no-js</a>
             </nav>
             <section class="forgrid">
                 <h1>Contact Form</h1>
